Feito toda parte de login do site

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
     <div class="container">
       <a href="./index.html">
-        <img src="./img/logo-univesp.png" alt="Logo da Univesp">
+        <img class="logo-univesp" src="./img/logo-univesp.png" alt="Logo da Univesp">
       </a>
 
-      <section aria-label="Login da conta univesp">
-        <img src="./img/logo-sou.png" alt="Imagem decorativa">
-        <h2> Sistema Operacinal Univesp</h2>
-        <p>Login</p>
-        <p>Digite o seu email Univesp</p>
+      <section class="login" aria-label="Login da conta univesp">
+        <img class="logo-sou" src="./img/logo-sou.png" alt="Imagem decorativa">
+        <h2 class="h2-login"> Sistema Operacinal Univesp</h2>
+        <p class="p-login">Login</p>
+        <p class="p-email">Digite o seu email Univesp</p>
 
-        <div>
+        <div class="acesso">
           <p>Esqueci a senha / Primeiro acesso</p>
-          <a href="./conteudo.html">Próximo</a>
+          <a class="button" href="./conteudo.html">Próximo</a>
         </div>
       </section>
 
