--- a/conteudo.html
+++ b/conteudo.html
@@ -6,11 +6,117 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Conteudo Univesp">
-  <title>Conteudo Univesp</title>
+  <title>Aluno Univesp</title>
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <h1>Conteudo</h1>
+  <div class="container-conteudo">
+    <nav class="nav">
+      <div>
+        <div class="nav-img">
+          <button class="btn">
+            <img src="./img/icons/menu-hamburguer.svg" alt="Menu">
+          </button>
+          <img src="./img/nav-logo.png" alt="Logo Univesp">
+        </div>
+
+        <ul class="nav-menu">
+          <li>
+            <img src="./img/icons/castle.svg" alt="#">
+            <p>Página da Instituição</p>
+          </li>
+          <li>
+            <img src="./img/icons/person.svg" alt="#">
+            <p>Fulano de tal</p>
+          </li>
+          <li>
+            <img src="./img/icons/language.svg" alt="#">
+            <p>Linha do Tempo</p>
+          </li>
+          <li>
+            <img src="./img/icons/groups.svg" alt="#">
+            <p>Cursos</p>
+          </li>
+          <li>
+            <img src="./img/icons/calendar.svg" alt="#">
+            <p>Calendário</p>
+          </li>
+          <li>
+            <img src="./img/icons/email.svg" alt="#">
+            <p>Mensagens</p>
+          </li>
+          <li>
+            <img src="./img/icons/fact.svg" alt="#">
+            <p>Notas</p>
+          </li>
+          <li>
+            <img src="./img/icons/note.svg" alt="#">
+            <p>Ferramentas</p>
+          </li>
+          <li>
+            <img src="./img/icons/logout.svg" alt="#">
+            <p>Fazer Logoff</p>
+          </li>
+        </ul>
+      </div>
+      <ul class="nav-info">
+        <li>Privacidade</li>
+        <li>termos</li>
+      </ul>
+    </nav>
+
+    <header class="header">
+      <button class="btn">
+        <img src="./img/icons/menu-hamburguer.svg" alt="Menu">
+      </button>
+      <h3 class="h3-header">Página da Instituição</h3>
+      <div class="img-header">
+        <img src="./img/logo-uni-branco.png" alt="Logo univesp">
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="content">
+        <h3>Escolha seu destino</h3>
+        <div class="destino-grid gri-main">
+          <img src="./img/escolha-des.png" alt="Escolha seu destino">
+          <ul class="main-content">
+            <li>Portal do Aluno</li>
+            <li>Canvas (CREA, Disciplinas Antigas, e...)</li>
+            <li>Office 365 (email, Onedrive, Ferram</li>
+            <li>Sistema de Atendimento Eletrônico</li>
+          </ul>
+        </div>
+      </section>
+      <section class="content">
+        <h3>Provas</h3>
+        <div class="grid-main-provas">
+          <ul class="main-contant order1">
+            <li>Acesse aqui o calendário geral provas</li>
+            <li>SEI - Acesso às provas e Calendário</li>
+            <li>Como realizar a prova no novo siste</li>
+            <li>Reprise do UNIVESP DIRETO - Novo</li>
+            <li>Turotial | Requerimento - Recorrer</li>
+          </ul>
+          <img class="order2" src="./img/provas.png" alt="Provas">
+        </div>
+      </section>
+      <section class="content">
+        <h3>Recursos Didáticos</h3>
+        <div class="gri-main">
+          <img src="./img/rec-dida.png" alt="Escolha seu destino">
+          <ul class="main-content">
+            <li>Pearson</li>
+            <li>Minha Biblioteca</li>
+            <li>Manual do Aluno</li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </div>
+
 </body>
 
 </html>
