--- a/conteudo.html
+++ b/conteudo.html
@@ -16,14 +16,14 @@
     <nav class="nav">
       <div>
         <div class="nav-img">
-          <button class="btn">
+          <button class="btn btn2">
             <img src="./img/icons/menu-hamburguer.svg" alt="Menu">
           </button>
-          <img src="./img/nav-logo.png" alt="Logo Univesp">
+          <img class="img-univesp-content" src="./img/nav-logo.png" alt="Logo Univesp">
         </div>
 
         <ul class="nav-menu">
-          <li>
+          <li class="li">
             <img src="./img/icons/castle.svg" alt="#">
             <p>Página da Instituição</p>
           </li>
@@ -55,10 +55,12 @@
             <img src="./img/icons/note.svg" alt="#">
             <p>Ferramentas</p>
           </li>
-          <li>
-            <img src="./img/icons/logout.svg" alt="#">
-            <p>Fazer Logoff</p>
-          </li>
+          <a class="link-logoff" href="./index.html">
+            <li>
+              <img src="./img/icons/logout.svg" alt="#">
+              <p>Fazer Logoff</p>
+            </li>
+          </a>
         </ul>
       </div>
       <ul class="nav-info">
@@ -68,7 +70,7 @@
     </nav>
 
     <header class="header">
-      <button class="btn">
+      <button data-js="btn" class="btn">
         <img src="./img/icons/menu-hamburguer.svg" alt="Menu">
       </button>
       <h3 class="h3-header">Página da Instituição</h3>
@@ -80,7 +82,7 @@
     <main class="main">
       <section class="content">
         <h3>Escolha seu destino</h3>
-        <div class="destino-grid gri-main">
+        <div class="destino-grid grid-main">
           <img src="./img/escolha-des.png" alt="Escolha seu destino">
           <ul class="main-content">
             <li>Portal do Aluno</li>
@@ -93,7 +95,7 @@
       <section class="content">
         <h3>Provas</h3>
         <div class="grid-main-provas">
-          <ul class="main-contant order1">
+          <ul class="main-content order1">
             <li>Acesse aqui o calendário geral provas</li>
             <li>SEI - Acesso às provas e Calendário</li>
             <li>Como realizar a prova no novo siste</li>
@@ -105,7 +107,7 @@
       </section>
       <section class="content">
         <h3>Recursos Didáticos</h3>
-        <div class="gri-main">
+        <div class="grid-main">
           <img src="./img/rec-dida.png" alt="Escolha seu destino">
           <ul class="main-content">
             <li>Pearson</li>
@@ -117,6 +119,7 @@
     </main>
   </div>
 
+  <script src="./javascript/main.js"></script>
 </body>
 
 </html>
