--- a/conteudo.html
+++ b/conteudo.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Conteudo Univesp">
   <title>Aluno Univesp</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
